--- a/index.html
+++ b/index.html
@@ -118,17 +118,19 @@
                         <div class="campo">
                             <label for="">Mensaje</label>
                             <textarea class="input-text" placeholder="Mensaje"></textarea>
-                        </div>
+                        </div> 
+                         
+                    </div> <!-- .contenedor-campos -->      
 
-                        <div class="alinear-derecha flex">
-                            <input class="boton w-100" type="button" value="Enviar">
-                        </div>    
-                    </div> <!-- .contenedor-campos -->         
+                    <div class="alinear-derecha flex">
+                        <input class="boton w-100" type="button" value="Enviar">
+                    </div>              
+
                 </fieldset>
             </form> <!-- .formulario-->
         </section>
         </main>
-    <footer>
+    <footer class="footer">  
         <p>Todos los derechos reservados - German Danilo Celis</p>
     </footer>
     
