--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="nav-bg">
         <nav class="navegacion-principal contenedor">
             <a href="index.html">Inicio</a> 
-            <a href="nosotros.html">Sobre Mi</a> 
-            <a href="nosotros.html">Clientes</a> 
+            <a href="#">Sobre Mi</a> 
+            <a href="#">Clientes</a> 
             <a href="#">Contacto</a> 
       </nav>
     </div>
